@@ -1,5 +1,17 @@
 Game Logic
 - Make isLegalMove more efficient
+- 50 move rule and threefold repetition (hash table of FEN's)
+
+Game Architecture
+- Use bitboards for speed considerations (optional)
+- pre-processing move generation
+- Will be changing structure of program so that board contains some game logic
+
+AI
+- Opening book
+- Transposition tables (optional)
+- History tables (optional)
+- Improve eval function
 
 Animation/UI
 - Menu when starting up applet
@@ -7,3 +19,4 @@ Animation/UI
 
 Miscellaneous
 - Move parser for better testing
+- convert position to pseudo-FEN
